# driving-school-app

./: .dockerignore  .editorconfig  .env.example  .env.production  .env.test  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  Complete Development Phases  Complete Ontario Driving School Software Market Readiness Checklist  Dockerfile  Dockerfile.production  File and Folder dir  LICENSE  LICENSE.txt  Makefile  Market Readiness Checklist  QA  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  electron-builder.json  package-lock.json  package.json  pyproject.toml  webpack.config.js  webpack.config.production.js
alembic/: README  env.py
alembic/versions/: 001_initial_schema.py  002_add_compliance_tables.py  003_add_toronto_zones.py  004_add_cancellation_tracking.py  005_add_insurance_medical.py  006_add_mto_export_tracking.py  007_add_gps_retention_triggers.py  008_add_version_tracking.py  __init__.py
docs/: coding_standards.md  customer_feedback_tracker.md  environment_requirements.md  git_workflow.md  mto_export_specifications.md  mto_portal_field_mapping.md  mto_portal_submission_guide.md  privacy_impact_assessment.md  regulatory_contacts.md  regulatory_requirements_checklist.md  security_requirements.md  shared_code_guidelines.md  technology_decision.md
docs/architecture_decisions/: unified_api_approach.md
docs/competitor_analysis/: conflict_handling_review.md  mto_integration_approaches.md  pain_points_summary.md  performance_benchmarks.md  pricing_analysis.md
docs/legal/: data_retention_policy.md  gps_tracking_consent.md  mto_portal_usage_disclaimer.md  privacy_impact_assessment.md  telemetry_consent.md  terms_of_service_draft.md
docs/migration_guides/: drivingschoolsoftware_migration.md  generic_csv_migration.md
docs/pilot_schools/: conflict_scenario_feedback.md  contact_list.md  mto_portal_workflow_feedback.md  performance_expectations.md
docs/security/: security_manager.md
docs/technical_spikes/: caching_strategy.md  (+8 more)
scripts/: demo_environment_setup.py  gps_data_cleanup_scheduler.py  import_competitor_data.py  install_dev_tools.py  pipeda_compliance_checklist.py  scrape_competitor_features.py  security_baseline_check.py  setup_docker_test_env.py  setup_redis.py  test_browser_automation_poc.py  test_cache_performance.py  test_circuit_breaker.py  test_conflict_scenarios.py  test_migration_rollback.py  test_mto_data_export.py  test_offline_sync.py  validate_environment.py  validate_gps_accuracy.py  validate_imported_data.py  validate_mto_compliance_requirements.py
(+246 files in other folders)
